--- a/package.json
+++ b/package.json
@@ -9,13 +9,19 @@
     "build": "rm -rf electron/dist && vite build && tsc -p electron && npm --prefix electron run start"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@types/node": "^24.10.1",
+    "@types/react": "^19.2.6",
+    "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.22",
     "concurrently": "^9.2.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.17",
     "typescript": "^5.2.2",
     "vite": "^7.2.2"
   }
