--- a/electron/tsconfig.json
+++ b/electron/tsconfig.json
@@ -7,7 +7,8 @@
     "outDir": "dist",
     "rootDir": ".",
     "esModuleInterop": true,
-    "incremental": false
+    "incremental": false,
+    "skipLibCheck": true
   },
-  "include": ["./**/*.ts"]
+  "include": ["**/*.ts", "types/**/*.d.ts"]
 }
