--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "scripts": {
     "dev": "vite --port 5173",
+    "electron:compile": "tsc -p electron/tsconfig.json",
     "electron": "npm --prefix electron run dev",
-    "dev:all": "concurrently \"npm run dev\" \"npm run electron\"",
+    "dev:all": "concurrently \"npm run dev\" \"npm run electron:compile && npm run electron\"",
     "build": "rm -rf electron/dist && vite build && tsc -p electron && npm --prefix electron run start"
   },
   "dependencies": {
