--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "!package-lock.json": []
   },
   "dependencies": {
+    "lucide-react": "^0.554.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
