--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "types": ["vite/client"],
     "incremental": false
   },
-  "include": ["src", "electron", "eslint.config.js"]
+  "include": ["src", "electron"]
 }
